[project]
name = "dreamerv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "minatar>=1.0.15",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
